<resources>
    <string name="app_name">一木林</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="common_unknown_error">未知错误</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="common_crash_hint">应用出了点小意外，正在重新启动</string>
    <string name="common_network_error">当前网络不可用，请检查网络设置</string>
    <string name="common_video_error_not_support">该视频不适合在此设备上播放</string>
    <string name="common_video_error_unknown">无法播放此视频</string>
    <string name="common_video_error_supplement">错误类型：%d，错误代码：%d</string>
    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>
    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>
    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="common_no_more_data">没有更多数据了</string>
    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>
    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>
    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>
    <string name="http_loading">加载中&#8230;</string>
    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="http_response_null_body">服务器数据返回异常，请稍后再试</string>
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <string name="date_title">请选择日期</string>
    <string name="time_title">请选择时间</string>
    <string name="update_title">发现新版本</string>
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">升级通知</string>
    <string name="share_title">分享到&#8230;</string>
    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>
    <string name="share_platform_copy_hint">已复制到剪贴板</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>
    <string name="safe_title">身份校验</string>
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">本地工具</string>
    <string name="home_nav_found">在线工具</string>
    <string name="home_nav_find">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>
    <string name="home_nav_setting">更多</string>
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="login_other">其他登录方式</string>
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="setting_title">设置</string>
    <string name="setting_language_switchover">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_password">修改密码</string>
    <string name="setting_phone">修改手机</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>
    <string name="about_copyright">Copyright © 2023 &#8211; 2023</string>
    <string name="password_forget_title">忘记密码</string>
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hint1">设置6&#8211;18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">修改成功</string>
    <string name="phone_reset_title">设置手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>
    <string name="phone_reset_commit_succeed">绑定成功</string>
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>
    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>
    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>
    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_phone_hint">立即绑定</string>
    <string name="web_title">网页加载中&#8230;</string>
    <string name="image_select_title">图片选择</string>
    <string name="image_select_all">所有图片</string>
    <string name="image_select_total">共 %d 张</string>
    <string name="image_select_max_hint">本次最多只能选择 %d 张图片</string>
    <string name="image_select_error">无法选中，该图片已经被删除</string>
    <string name="image_crop_error_not_support">裁剪失败，当前手机不支持裁剪图片</string>
    <string name="video_select_title">视频选择</string>
    <string name="video_select_all">所有视频</string>
    <string name="video_select_total">共 %d 个</string>
    <string name="video_select_max_hint">本次最多只能选择 %d 个视频</string>
    <string name="video_select_error">无法选中，该视频已经被删除</string>
    <string name="camera_launch_fail">无法启动相机</string>
    <string name="camera_image_error">目标地址错误</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="status_layout_no_data">空空如也</string>
    <string name="status_layout_error_request">请求出错，请重试</string>
    <string name="status_layout_error_network">网络错误，请重试</string>
    <string name="status_layout_retry">重试</string>
    <string name="calculator">计算</string>
    <string name="exchange">汇率</string>
    <string name="relation">关系</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="none"></string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="AC">AC</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="currency_dialog_title">选择币种</string>
    <string name="currency_dialog_cancel">取消</string>
    <string name="error_10001">错误的请求KEY</string>
    <string name="error_10002">该KEY无请求权限</string>
    <string name="error_10003">KEY过期</string>
    <string name="error_10004">错误的OPENID</string>
    <string name="error_10005">应用未审核超时，请提交认证</string>
    <string name="error_10007">未知的请求源</string>
    <string name="error_10008">被禁止的IP</string>
    <string name="error_10009">被禁止的KEY</string>
    <string name="error_10011">当前IP请求超过限制</string>
    <string name="error_10012">请求超过次数限制</string>
    <string name="error_10013">测试KEY超过请求限制</string>
    <string name="error_10014">系统内部异常</string>
    <string name="error_208001">货币兑换名称不能为空</string>
    <string name="error_208002">查询不到汇率相关信息</string>
    <string name="error_208003">网络错误，请重试</string>
    <string name="error_208004">查询不到常用货币相关信息</string>
    <string name="error_208005">不存在的货币种类</string>
    <string name="error_208006">查询不到该货币兑换相关信息</string>
    <string name="me">我</string>
    <string name="link">的</string>
    <string name="husband1">丈夫</string>
    <string name="husband2">老公</string>
    <string name="wife1">妻子</string>
    <string name="wife2">老婆</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="brother1">哥哥</string>
    <string name="brother2">弟弟</string>
    <string name="sister1">姐姐</string>
    <string name="sister2">妹妹</string>
    <string name="son">儿子</string>
    <string name="daughter">女儿</string>
    <string name="father_father">爷爷</string>
    <string name="father_mother">奶奶</string>
    <string name="mother_father">外公</string>
    <string name="mother_mother">外婆</string>
    <string name="son_son">孙子</string>
    <string name="son_daughter">孙女</string>
    <string name="daughter_son">外孙</string>
</resources>