<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        app:titleSize="18sp"
        app:titleStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_forget_title" />

    <com.hjq.shape.layout.ShapeLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_16"
        app:shape_radius="8dp"
        app:shape_solidColor="#F6F6F6">

        <com.hjq.widget.view.RegexEditText
            android:id="@+id/et_password_forget_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone_ic"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/common_phone_input_hint"
            android:inputType="number"
            android:singleLine="true"
            app:regexType="mobile" />
    </com.hjq.shape.layout.ShapeLinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_20" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.hjq.shape.layout.ShapeLinearLayout
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:shape_radius="8dp"
            app:shape_solidColor="#F6F6F6">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_forget_code"
                style="@style/EditTextStyle"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/safe_ic"
                android:drawablePadding="@dimen/dp_15"
                android:hint="@string/common_code_input_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="@integer/sms_code_length"
                android:singleLine="true" />
        </com.hjq.shape.layout.ShapeLinearLayout>

        <com.hjq.widget.view.CountdownView
            android:id="@+id/cv_password_forget_countdown"
            style="@style/CountdownViewStyle" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_forget_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:text="@string/common_step_next" />

</LinearLayout>