<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.yimulin.mobile.ui.activity.AboutActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/about_title" />

    <com.hjq.widget.view.ScaleImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_40"
        app:scaleRatio="1.5"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#222222"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V1.0.0"
            android:textColor="#222222"
            android:textSize="@dimen/sp_18" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dp_10"
            android:text="你想要的的这里都有"
            android:textColor="#222222"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_20"
        android:text="@string/about_copyright"
        android:textColor="#BDBDBD"
        android:textSize="@dimen/sp_14" />

</LinearLayout>