<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_from_bottom"
    android:orientation="vertical"
    tools:layoutAnimation="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.hjq.bar.TitleBar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            app:barStyle="transparent"
            app:leftIcon="@null"
            app:rightBackground="@null"
            app:rightTitleColor="@color/common_accent_color"
            app:rightTitleSize="@dimen/sp_14"
            app:title=""
            app:titleSize="18sp"
            app:titleStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginVertical="@dimen/dp_10"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/ll_login_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.hjq.shape.layout.ShapeLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_16"
                app:shape_radius="8dp"
                app:shape_solidColor="#F6F6F6">

                <com.hjq.widget.view.ClearEditText
                    android:id="@+id/et_login_phone"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_phone_input_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    app:regexType="mobile" />
            </com.hjq.shape.layout.ShapeLinearLayout>

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginHorizontal="@dimen/dp_40" />

            <LinearLayout
                android:id="@+id/login_type_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="vertical"
                android:visibility="gone">

                <com.hjq.shape.layout.ShapeLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shape_radius="8dp"
                    app:shape_solidColor="#F6F6F6">

                    <com.hjq.widget.view.PasswordEditText
                        android:id="@+id/et_login_password"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/common_password_input_error"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:singleLine="true" />
                </com.hjq.shape.layout.ShapeLinearLayout>

                <View style="@style/HorizontalLineStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_type_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.hjq.shape.layout.ShapeLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:shape_radius="8dp"
                        app:shape_solidColor="#F6F6F6">

                        <com.hjq.widget.view.RegexEditText
                            android:id="@+id/et_register_code"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/common_code_input_hint"
                            android:inputType="number"
                            android:maxLength="@integer/sms_code_length"
                            android:singleLine="true"
                            app:regexType="number" />
                    </com.hjq.shape.layout.ShapeLinearLayout>

                    <View
                        style="@style/HorizontalLineStyle"
                        android:layout_gravity="bottom" />
                </FrameLayout>

                <com.hjq.widget.view.CountdownView
                    android:id="@+id/cv_register_countdown"
                    style="@style/CountdownViewStyle" />
            </LinearLayout>

            <RelativeLayout
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="密码登录"
                    android:textColor="@color/common_accent_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_login_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:text="@string/login_forget"
                    android:textColor="@color/common_accent_color" />
            </RelativeLayout>

            <com.hjq.widget.view.SubmitButton
                android:id="@+id/btn_login_commit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/login_text" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/ll_login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                style="@style/HorizontalLineStyle"
                android:layout_width="@dimen/dp_60"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:text="@string/login_other"
                android:textColor="@color/black50" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_width="@dimen/dp_60"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.hjq.widget.view.ScaleImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginVertical="@dimen/dp_20"
                android:layout_weight="1"
                app:scaleRatio="1.2"
                app:srcCompat="@drawable/login_qq_ic" />

            <com.hjq.widget.view.ScaleImageView
                android:id="@+id/iv_login_wechat"
                android:layout_width="@dimen/dp_35"
                android:layout_height="@dimen/dp_35"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginVertical="@dimen/dp_20"
                android:layout_weight="1"
                app:scaleRatio="1.2"
                app:srcCompat="@drawable/login_wechat_ic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10">

            <com.hjq.shape.view.ShapeCheckBox
                android:id="@+id/cb_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="阅读并同意"
                android:textSize="@dimen/sp_10"
                app:shape_buttonCheckedDrawable="@drawable/checkbox_checked_ic"
                app:shape_buttonDrawable="@drawable/checkbox_disable_ic" />

            <TextView
                android:id="@+id/xieyi_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>